tdf#98059 Don't replace existing objects when inserting media

Change-Id: I849e6801a20fcd3fb10482854e56923f99060f04
Reviewed-on: https://gerrit.libreoffice.org/30776
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
Tested-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>